--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tarot</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <main class="tarot-page__container">
             <h1 class="tarot-page__heading">Ask tarot anything</h1>
             <form class="tarot-page__input-form" action="/" method="GET">
-                <input type="text" placeholder="input your question here, be as descriptive as possible">
-                <button type="submit"></button>
+                <input type="text" placeholder="input your question here, be as descriptive as possible..." required>
+                <button type="submit" style="font-size: 24px;">&#128302;</button>
             </form>
             <div class="tarot-card-display__flexbox">
                 <div class="tarot-card-display__container"></div>
