Added the first 10 cards out of 78 card tarot deck

--- a/index.html
+++ b/index.html
@@ -23,13 +23,46 @@
             </form>
             <div class="tarot-card-display__flexbox">
                 <div class="tarot-card-display__container" id="card1">
-                    <img src="tarot-card-images/the-fool.jpeg" alt="">
+                    <img src="tarot-card-images/the-fool.jpeg" alt="Tarot card image of the fool" id="the-fool">
+                    <img src="tarot-card-images/the-magician.jpg" alt="Tarot card image of the magician" id="the-magician" style="z-index: 2;">
+                    <img src="tarot-card-images/the-high-priestess.jpg" alt="Tarot card image of the high priestess" id="the-high-priestess" style="z-index: 3;">
+                    <img src="tarot-card-images/the-empress.jpg" alt="Tarot card image of the empress" id="the-empress" style="z-index: 4;">
+                    <img src="tarot-card-images/the-emperor.jpeg" alt="Tarot card image of the emperor" id="the-emperor" style="z-index: 5;">
+                    <img src="tarot-card-images/the-hierophant.jpg" alt="Tarot card image of the hierophant" id="the-hierophant" style="z-index: 6;">
+                    <img src="/tarot-card-images/the-lovers.png" alt="Tarot card image of the lovers" id="the-lovers" style="z-index: 7;">
+                    <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
+                    <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
+                    <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+
                 </div>
                 <div class="tarot-card-display__container" id="card2">
-                    <img src="tarot-card-images/the-fool.jpeg" alt="">
+                    <img src="tarot-card-images/the-fool.jpeg" alt="Tarot card image of the fool" id="the-fool">
+                    <img src="tarot-card-images/the-magician.jpg" alt="Tarot card image of the magician" id="the-magician" style="z-index: 2;">
+                    <img src="tarot-card-images/the-high-priestess.jpg" alt="Tarot card image of the high priestess" id="the-high-priestess" style="z-index: 3;">
+                    <img src="tarot-card-images/the-empress.jpg" alt="Tarot card image of the empress" id="the-empress" style="z-index: 4;">
+                    <img src="tarot-card-images/the-emperor.jpeg" alt="Tarot card image of the emperor" id="the-emperor" style="z-index: 5;">
+                    <img src="tarot-card-images/the-hierophant.jpg" alt="Tarot card image of the hierophant" id="the-hierophant" style="z-index: 6;">
+                    <img src="/tarot-card-images/the-lovers.png" alt="Tarot card image of the lovers" id="the-lovers" style="z-index: 7;">
+                    <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
+                    <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
+                    <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+
+
+
                 </div>
                 <div class="tarot-card-display__container" id="card3">
-                    <img src="tarot-card-images/the-fool.jpeg" alt="">
+                    <img src="tarot-card-images/the-fool.jpeg" alt="Tarot card image of the fool" id="the-fool">
+                    <img src="tarot-card-images/the-magician.jpg" alt="Tarot card image of the magician" id="the-magician" style="z-index: 2;">
+                    <img src="tarot-card-images/the-high-priestess.jpg" alt="Tarot card image of the high priestess" id="the-high-priestess" style="z-index: 3;">
+                    <img src="tarot-card-images/the-empress.jpg" alt="Tarot card image of the empress" id="the-empress" style="z-index: 4;">
+                    <img src="tarot-card-images/the-emperor.jpeg" alt="Tarot card image of the emperor" id="the-emperor" style="z-index: 5;">
+                    <img src="tarot-card-images/the-hierophant.jpg" alt="Tarot card image of the hierophant" id="the-hierophant" style="z-index: 6;">
+                    <img src="/tarot-card-images/the-lovers.png" alt="Tarot card image of the lovers" id="the-lovers" style="z-index: 7;">
+                    <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
+                    <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
+                    <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+
+
                 </div>
             </div>
             <dialog id="dialog-popup">
