Adding another 10 cards at 20/78

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                     <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
                     <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
                     <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+                    <img src="/tarot-card-images/wheel-of-fortune.jpeg" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" style="z-index: 11;">
+                    <img src="/tarot-card-images/justice.jpg" alt="Tarot card image of justice" id="justice" style="z-index: 12;">
+                    <img src="/tarot-card-images/the-hanged-man.jpg" alt="Tarot card image of the hanged man" id="the-hanged-man" style="z-index: 13;">
+                    <img src="/tarot-card-images/death.jpg" alt="Tarot card image of death" id="death" style="z-index: 14;">
+                    <img src="/tarot-card-images/temperance.jpeg" alt="Tarot card image of temperance" id="temperance" style="z-index: 15;">
+                    <img src="/tarot-card-images/the-devil.jpg" alt="Tarot card image of the devil" id="the-devil" style="z-index: 16;">
+                    <img src="/tarot-card-images/the-tower.jpg" alt="Tarot card image of the tower" id="the-tower" style="z-index: 17;">
+                    <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
+                    <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
+                    <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
 
                 </div>
                 <div class="tarot-card-display__container" id="card2">
@@ -46,6 +56,16 @@
                     <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
                     <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
                     <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+                    <img src="/tarot-card-images/wheel-of-fortune.jpeg" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" style="z-index: 11;">
+                    <img src="/tarot-card-images/justice.jpg" alt="Tarot card image of justice" id="justice" style="z-index: 12;">
+                    <img src="/tarot-card-images/the-hanged-man.jpg" alt="Tarot card image of the hanged man" id="the-hanged-man" style="z-index: 13;">
+                    <img src="/tarot-card-images/death.jpg" alt="Tarot card image of death" id="death" style="z-index: 14;">
+                    <img src="/tarot-card-images/temperance.jpeg" alt="Tarot card image of temperance" id="temperance" style="z-index: 15;">
+                    <img src="/tarot-card-images/the-devil.jpg" alt="Tarot card image of the devil" id="the-devil" style="z-index: 16;">
+                    <img src="/tarot-card-images/the-tower.jpg" alt="Tarot card image of the tower" id="the-tower" style="z-index: 17;">
+                    <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
+                    <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
+                    <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
 
 
 
@@ -61,6 +81,16 @@
                     <img src="/tarot-card-images/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
                     <img src="/tarot-card-images/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
                     <img src="/tarot-card-images/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
+                    <img src="/tarot-card-images/wheel-of-fortune.jpeg" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" style="z-index: 11;">
+                    <img src="/tarot-card-images/justice.jpg" alt="Tarot card image of justice" id="justice" style="z-index: 12;">
+                    <img src="/tarot-card-images/the-hanged-man.jpg" alt="Tarot card image of the hanged man" id="the-hanged-man" style="z-index: 13;">
+                    <img src="/tarot-card-images/death.jpg" alt="Tarot card image of death" id="death" style="z-index: 14;">
+                    <img src="/tarot-card-images/temperance.jpeg" alt="Tarot card image of temperance" id="temperance" style="z-index: 15;">
+                    <img src="/tarot-card-images/the-devil.jpg" alt="Tarot card image of the devil" id="the-devil" style="z-index: 16;">
+                    <img src="/tarot-card-images/the-tower.jpg" alt="Tarot card image of the tower" id="the-tower" style="z-index: 17;">
+                    <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
+                    <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
+                    <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
 
 
                 </div>
