Addding tarot images

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </form>
             <div class="tarot-card-display__flexbox">
                 <div class="tarot-card-display__container" id="card1">
+                    <!-- Major Arcana -->
                     <img src="tarot-card-images/the-fool.jpeg" alt="Tarot card image of the fool" id="the-fool">
                     <img src="tarot-card-images/the-magician.jpg" alt="Tarot card image of the magician" id="the-magician" style="z-index: 2;">
                     <img src="tarot-card-images/the-high-priestess.jpg" alt="Tarot card image of the high priestess" id="the-high-priestess" style="z-index: 3;">
@@ -43,6 +44,25 @@
                     <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
                     <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
                     <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
+                    <img src="/tarot-card-images/judgement.jpg" alt="Tarot card image of judgement" id="judgement" style="z-index: 21;">
+                    <img src="/tarot-card-images/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
+
+                    <!-- Wands -->
+                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
+                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
+                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
+                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
+                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
+                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
+                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
+                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
+                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
+                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
+                    <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
+                    <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
+                    <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
+                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
+
 
                 </div>
                 <div class="tarot-card-display__container" id="card2">
@@ -66,7 +86,25 @@
                     <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
                     <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
                     <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
+                    <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
+                    <img src="/tarot-card-images/judgement.jpg" alt="Tarot card image of judgement" id="judgement" style="z-index: 21;">
+                    <img src="/tarot-card-images/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
 
+                    <!-- Wands -->
+                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
+                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
+                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
+                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
+                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
+                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
+                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
+                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
+                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
+                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
+                    <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
+                    <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
+                    <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
+                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
 
 
                 </div>
@@ -91,7 +129,24 @@
                     <img src="/tarot-card-images/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
                     <img src="/tarot-card-images/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
                     <img src="/tarot-card-images/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
+                    <img src="/tarot-card-images/judgement.jpg" alt="Tarot card image of judgement" id="judgement" style="z-index: 21;">
+                    <img src="/tarot-card-images/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
 
+                    <!-- Wands -->
+                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
+                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
+                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
+                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
+                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
+                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
+                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
+                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
+                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
+                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
+                    <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
+                    <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
+                    <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
+                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
 
                 </div>
             </div>
