Added 10+ cards at like 46/78

--- a/index.html
+++ b/index.html
@@ -48,20 +48,36 @@
                     <img src="/tarot-card-images/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
 
                     <!-- Wands -->
-                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
-                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
-                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
-                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
-                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
-                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
-                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
-                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
-                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
-                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
-                    <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
-                    <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
-                    <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
-                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
+                    <img src="/tarot-card-images/wands/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
+                    <img src="/tarot-card-images/wands/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
+                    <img src="/tarot-card-images/wands/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
+                    <img src="/tarot-card-images/wands/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
+                    <img src="/tarot-card-images/wands/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
+                    <img src="/tarot-card-images/wands/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
+                    <img src="/tarot-card-images/wands/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
+                    <img src="/tarot-card-images/wands/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
+                    <img src="/tarot-card-images/wands/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
+                    <img src="/tarot-card-images/wands/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
+                    <img src="/tarot-card-images/wands/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
+                    <img src="/tarot-card-images/wands/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
+                    <img src="/tarot-card-images/wands/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
+                    <img src="/tarot-card-images/wands/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="" style="z-index: 36;">
+
+                    <!-- Pentacles also referred to as coins -->
+                    <img src="/tarot-card-images/pentacles/1-pents.jpg" alt="Tarot card image of the ace of pentacles" id="1-pents" class="" style="z-index: 37;">
+                    <img src="/tarot-card-images/pentacles/2-pents.jpg" alt="Tarot card image of the two of pentacles" id="2-pents" class="" style="z-index: 38;">
+                    <img src="/tarot-card-images/pentacles/3-pents.jpg" alt="Tarot card image of the three of pentacles" id="3-pents" class="" style="z-index: 39;">
+                    <img src="/tarot-card-images/pentacles/4-pents.jpg" alt="Tarot card image of the four of pentacles" id="4-pents" class="" style="z-index: 40;">
+                    <img src="/tarot-card-images/pentacles/5-pents.jpg" alt="Tarot card image of the five of pentacles" id="5-pents" class="" style="z-index: 41;">
+                    <img src="/tarot-card-images/pentacles/6-pents.jpg" alt="Tarot card image of the six of pentacles" id="6-pents" class="" style="z-index: 42;">
+                    <img src="/tarot-card-images/pentacles/7-pents.jpg" alt="Tarot card image of the seven of pentacles" id="7-pents" class="" style="z-index: 43;">
+                    <img src="/tarot-card-images/pentacles/8-pents.jpg" alt="Tarot card image of the eight of pentacles" id="8-pents" class="" style="z-index: 44;">
+                    <img src="/tarot-card-images/pentacles/9-pents.jpg" alt="Tarot card image of the nine of pentacles" id="9-pents" class="" style="z-index: 45;">
+                    <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="" style="z-index: 46;">
+                    <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="" style="z-index: 47;">
+                    <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knigght of pentacles" id="knight-pents" class="" style="z-index: 48;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
 
 
                 </div>
@@ -106,6 +122,22 @@
                     <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
                     <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
 
+                    <!-- Pentacles also referred to as coins -->
+                    <img src="/tarot-card-images/pentacles/1-pents.jpg" alt="Tarot card image of the ace of pentacles" id="1-pents" class="visible" style="z-index: 37;">
+                    <img src="/tarot-card-images/pentacles/2-pents.jpg" alt="Tarot card image of the two of pentacles" id="2-pents" class="visible" style="z-index: 38;">
+                    <img src="/tarot-card-images/pentacles/3-pents.jpg" alt="Tarot card image of the three of pentacles" id="3-pents" class="visible" style="z-index: 39;">
+                    <img src="/tarot-card-images/pentacles/4-pents.jpg" alt="Tarot card image of the four of pentacles" id="4-pents" class="visible" style="z-index: 40;">
+                    <img src="/tarot-card-images/pentacles/5-pents.jpg" alt="Tarot card image of the five of pentacles" id="5-pents" class="visible" style="z-index: 41;">
+                    <img src="/tarot-card-images/pentacles/6-pents.jpg" alt="Tarot card image of the six of pentacles" id="6-pents" class="visible" style="z-index: 42;">
+                    <img src="/tarot-card-images/pentacles/7-pents.jpg" alt="Tarot card image of the seven of pentacles" id="7-pents" class="visible" style="z-index: 43;">
+                    <img src="/tarot-card-images/pentacles/8-pents.jpg" alt="Tarot card image of the eight of pentacles" id="8-pents" class="visible" style="z-index: 44;">
+                    <img src="/tarot-card-images/pentacles/9-pents.jpg" alt="Tarot card image of the nine of pentacles" id="9-pents" class="visible" style="z-index: 45;">
+                    <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="visible" style="z-index: 46;">
+                    <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="visible" style="z-index: 47;">
+                    <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knight of pentacles" id="knight-pents" class="" style="z-index: 48;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
+
 
                 </div>
                 <div class="tarot-card-display__container" id="card3">
@@ -133,20 +165,36 @@
                     <img src="/tarot-card-images/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
 
                     <!-- Wands -->
-                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
-                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" style="z-index: 24;">
-                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" style="z-index: 25;">
-                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" style="z-index: 26;">
-                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" style="z-index: 27;">
-                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" style="z-index: 28;">
-                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" style="z-index: 29;">
-                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" style="z-index: 30;">
-                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" style="z-index: 31;">
-                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" style="z-index: 32;">
+                    <img src="/tarot-card-images/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" class="" style="z-index: 23;">
+                    <img src="/tarot-card-images/2-wands.jpg" alt="Tarot card image of the two of wands" id="2-wands" class="" style="z-index: 24;">
+                    <img src="/tarot-card-images/3-wands.jpg" alt="Tarot card image of the three of wands" id="3-wands" class="" style="z-index: 25;">
+                    <img src="/tarot-card-images/4-wands.jpg" alt="Tarot card image of the four of wands" id="4-wands" class="" style="z-index: 26;">
+                    <img src="/tarot-card-images/5-wands.jpeg" alt="Tarot card image of the five of wands" id="5-wands" class="" style="z-index: 27;">
+                    <img src="/tarot-card-images/6-wands.jpeg" alt="Tarot card image of the six of wands" id="6-wands" class="" style="z-index: 28;">
+                    <img src="/tarot-card-images/7-wands.jpg" alt="Tarot card image of the seven of wands" id="7-wands" class="" style="z-index: 29;">
+                    <img src="/tarot-card-images/8-wands.jpg" alt="Tarot card image of the eight of wands" id="8-wands" class="" style="z-index: 30;">
+                    <img src="/tarot-card-images/9-wands.jpeg" alt="Tarot card image of the nine of wands" id="9-wands" class="" style="z-index: 31;">
+                    <img src="/tarot-card-images/10-wands.jpg" alt="Tarot card image of the ten of wands" id="10-wands" class="" style="z-index: 32;">
                     <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
                     <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
                     <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
-                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
+                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="" style="z-index: 36;">
+
+                    <!-- Pentacles also referred to as coins -->
+                    <img src="/tarot-card-images/pentacles/1-pents.jpg" alt="Tarot card image of the ace of pentacles" id="1-pents" class="" style="z-index: 37;">
+                    <img src="/tarot-card-images/pentacles/2-pents.jpg" alt="Tarot card image of the two of pentacles" id="2-pents" class="" style="z-index: 38;">
+                    <img src="/tarot-card-images/pentacles/3-pents.jpg" alt="Tarot card image of the three of pentacles" id="3-pents" class="" style="z-index: 39;">
+                    <img src="/tarot-card-images/pentacles/4-pents.jpg" alt="Tarot card image of the four of pentacles" id="4-pents" class="" style="z-index: 40;">
+                    <img src="/tarot-card-images/pentacles/5-pents.jpg" alt="Tarot card image of the five of pentacles" id="5-pents" class="" style="z-index: 41;">
+                    <img src="/tarot-card-images/pentacles/6-pents.jpg" alt="Tarot card image of the six of pentacles" id="6-pents" class="" style="z-index: 42;">
+                    <img src="/tarot-card-images/pentacles/7-pents.jpg" alt="Tarot card image of the seven of pentacles" id="7-pents" class="" style="z-index: 43;">
+                    <img src="/tarot-card-images/pentacles/8-pents.jpg" alt="Tarot card image of the eight of pentacles" id="8-pents" class="" style="z-index: 44;">
+                    <img src="/tarot-card-images/pentacles/9-pents.jpg" alt="Tarot card image of the nine of pentacles" id="9-pents" class="" style="z-index: 45;">
+                    <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="" style="z-index: 46;">
+                    <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="" style="z-index: 47;">
+                    <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knigght of pentacles" id="knight-pents" class="" style="z-index: 48;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
 
                 </div>
             </div>
